--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,9 @@ export(Felipe_radar)
 export(consistencia)
 export(round_excel)
 export(round_excel_decimais)
+import(crayon)
 import(dplyr)
 import(ggplot2)
 import(scales)
 import(stringr)
 import(tibble)
-importFrom(crayon,green)
-importFrom(crayon,yellow)
