--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,16 @@
 
 export(Felipe_radar)
 export(consistencia)
+export(consistencia_abertas)
+export(consistencia_geral)
+export(consistencia_label)
 export(print_cor)
 export(round_excel)
 export(round_excel_decimais)
 import(dplyr)
 import(ggplot2)
+import(openxlsx)
 import(scales)
 import(stringr)
 import(tibble)
+import(tidyr)
