--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,6 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
-Imports: dplyr, stringr, ggplot2, scales, tibble
+Imports: dplyr, stringr, ggplot2, scales, tibble, tidyr, openxlsx
 Depends: 
     R (>= 2.10)
