--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(consistencia)
 export(consistencia_abertas)
 export(consistencia_geral)
 export(consistencia_label)
+export(pos_processamento_mrg_media_das_medias)
 export(print_cor)
 export(round_excel)
 export(round_excel_decimais)
@@ -18,5 +19,6 @@ import(scales)
 import(stringr)
 import(tibble)
 import(tidyr)
+importFrom(purrr,imap)
 importFrom(purrr,map_df)
 importFrom(stringr,str_c)
