--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,11 @@ export(FUN_Citou)
 export(FUN_MRG)
 export(FUN_isoladas)
 export(Felipe_radar)
+export(PosProce_meanofmean)
 export(consistencia)
 export(consistencia_abertas)
 export(consistencia_geral)
 export(consistencia_label)
-export(pos_processamento_mrg_media_das_medias)
 export(print_cor)
 export(round_excel)
 export(round_excel_decimais)
