--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(FUN_Citou)
 export(FUN_MRG)
 export(FUN_isoladas)
+export(FUN_media)
+export(FUN_media_das_medias)
 export(Felipe_radar)
 export(PosProce_meanofmean)
 export(consistencia)
@@ -19,6 +21,8 @@ import(scales)
 import(stringr)
 import(tibble)
 import(tidyr)
+importFrom(Hmisc,wtd.quantile)
+importFrom(Hmisc,wtd.var)
 importFrom(purrr,imap)
 importFrom(purrr,map_df)
 importFrom(stringr,str_c)
