--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,10 @@
 export(FUN_Citou)
 export(FUN_MRG)
 export(FUN_cruzaMRG)
+export(FUN_cruzaMedia)
 export(FUN_cruzaVar)
 export(FUN_isoladas)
 export(FUN_media)
-export(FUN_media_das_medias)
 export(Felipe_radar)
 export(PosProce_meanofmean)
 export(consistencia)
@@ -26,7 +26,9 @@ import(tidyr)
 importFrom(Hmisc,wtd.quantile)
 importFrom(Hmisc,wtd.var)
 importFrom(purrr,imap)
+importFrom(purrr,map)
 importFrom(purrr,map_df)
 importFrom(stringr,str_c)
 importFrom(stringr,str_subset)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,unnest)
