--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(FUN_Citou)
 export(FUN_MRG)
+export(FUN_cruzaCitou)
 export(FUN_cruzaMRG)
 export(FUN_cruzaMedia)
 export(FUN_cruzaVar)
@@ -13,6 +14,8 @@ export(consistencia)
 export(consistencia_abertas)
 export(consistencia_geral)
 export(consistencia_label)
+export(func_freqToDF)
+export(func_processamento)
 export(print_cor)
 export(round_excel)
 export(round_excel_decimais)
@@ -27,8 +30,12 @@ importFrom(Hmisc,wtd.quantile)
 importFrom(Hmisc,wtd.var)
 importFrom(purrr,imap)
 importFrom(purrr,map)
+importFrom(purrr,map2)
 importFrom(purrr,map_df)
+importFrom(purrr,pluck)
 importFrom(stringr,str_c)
 importFrom(stringr,str_subset)
+importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,replace_na)
 importFrom(tidyr,unnest)
