--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,6 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
-Imports: dplyr, stringr, ggplot2, scales, tibble, tidyr, openxlsx, purrr, Hmisc
+Imports: dplyr, stringr, ggplot2, scales, tibble, tidyr, openxlsx, purrr, Hmisc, cli
 Depends: 
     R (>= 2.10)
